# rosneuro_acquisition

./: .gitignore  CMakeLists.txt  README  README.md  package.xml
example/: example_plugin.cpp  run.cpp
include/rosneuro_acquisition/: Acquisition.hpp  AcquisitionConverter.hpp  AcquisitionTools.hpp  Device.hpp  DeviceFactory.hpp  DeviceRegistration.hpp  DummyDevice.hpp  EGDDevice.hpp  FactoryDevice.hpp  LSLDevice.hpp  NeuroData.hpp  SelfFactoryDevice.hpp  Writer.hpp
launch/: acquisition.launch
src/: Acquisition.cpp  AcquisitionConverter.cpp  AcquisitionTools.cpp  Device.cpp  DeviceFactory.cpp  DummyDevice.cpp  EGDDevice.cpp  FactoryDevice.cpp  LSLDevice.cpp  NeuroData.cpp  SelfFactoryDevice.cpp  Writer.cpp  acquisition.cpp  lslclient.cpp  main.cpp  test_devicefactory.cpp  test_egddevice.cpp  test_factory.cpp  test_plugin.cpp  test_regexp.cpp  test_rule1.cpp  test_rule2.cpp  test_rule3.cpp  test_selffactory.cpp
test/: TestAcquisition.cpp  TestConfiguration.cpp  TestDevice.cpp  test_acquisition.cpp  test_configuration.cpp  test_device.cpp
