<?xml version="1.0"?>
<package format="2">
  <name>rosneuro_acquisition</name>
  <version>0.0.0</version>
  <description>ROSNEURO Acquisition package</description>
  <author email="luca.tonin@epfl.ch">Luca Tonin</author>
  <maintainer email="luca.tonin@epfl.ch">Luca Tonin</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>
  <build_depend>cmake_modules</build_depend>
  
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
