<?xml version="1.0"?>
<package format="2">
  <name>rosneuro_acquisition</name>
  <version>0.0.1</version>
  <description>ROSNEURO Acquisition package to acquire Neural data from different devices</description>
  <author email="luca.tonin@epfl.ch">Luca Tonin</author>
  <maintainer email="luca.tonin@epfl.ch">Luca Tonin</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  
  <depend>rosneuro_msgs</depend>
  <exec_depend>message_runtime</exec_depend>

</package>
